Backport:

2004-02-04  Mark Mitchell  <mark@codesourcery.com>

        PR c++/9941
        * rtti.c (tinfo_base_init): Use import_export_tinfo to decide
        the
        linkage for the typeinfo name string.

From-SVN: r78965